# DeepImageSearchLite

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_to_pypi.yml  python-publish.yml
DeepSearchLite/: DeepSearchLite.py
Example/: FeatureExtractor.py  deepSearch.py
deepsearchlite/: DeepSearchLite.py  conflog.py  utils.py
